--- a/Layouts/Story.xml
+++ b/Layouts/Story.xml
@@ -70,7 +70,7 @@
             <blend-mode>0</blend-mode>
             <effect-fallback>0</effect-fallback>
             <instances>
-                <instance type="blinkingShit" uid="51">
+                <instance type="cursor" uid="51">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
                         <initial-animation>Default</initial-animation>
