added new layout and renamed first 3 event sheets

--- a/Layouts/Level 1.xml
+++ b/Layouts/Level 1.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>Level 1</name>
     <sid>2804895207704382</sid>
-    <event-sheet>Event sheet 3</event-sheet>
+    <event-sheet>Level 1 Events</event-sheet>
     <size>
         <width>4000</width>
         <height>2000</height>
