--- a/Layouts/Story.xml
+++ b/Layouts/Story.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>Story</name>
     <sid>1123751008943291</sid>
-    <event-sheet>Event sheet 2</event-sheet>
+    <event-sheet>Story Events</event-sheet>
     <size>
         <width>1708</width>
         <height>960</height>
