--- a/Layouts/Start Menu.xml
+++ b/Layouts/Start Menu.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>Start Menu</name>
     <sid>432155009734049</sid>
-    <event-sheet>Event sheet 1</event-sheet>
+    <event-sheet>Start Menu Events</event-sheet>
     <size>
         <width>1708</width>
         <height>960</height>
